Setup JS architecture

--- a/app/src/sass/main.scss
+++ b/app/src/sass/main.scss
@@ -1,1 +1,9 @@
+// Required Config
+@import 'includes/variables';
+@import 'includes/animations';
 
+// Stylesheets
+@import 'includes/background';
+@import 'includes/fonts';
+@import 'includes/components';
+@import 'includes/media-queries';
